create search data screen and item detail secreen
